# birl_baxter_examples

./: .gitignore
example_baxter_kinematics/: CMakeLists.txt~
example_baxter_kinematics/scripts/: numIKin_Jac_wNullSpace.py  rrmc.py
example_camera_control/: CMakeLists.txt~
example_gui/example_button_gui/: CMakeLists.txt~  package.xml~  plugin.xml~
example_gui/example_button_gui/scripts/: example_button_gui.py~
example_gui/example_button_gui/src/example_button_gui/: _example_button_gui_module.py~
example_gui/example_gui2/: package.xml~  plugin.xml~
example_gui/example_gui2/src/example_gui2/: _example_gui2_module.py~
example_moveit/planning/scripts/: simple_getRobotState.py~  simple_goPoseTarget.py~
example_pcl/launch/: freenect_pcl.launch~  icp.launch~  octree.launch~  voxel.launch~
example_smach/: CMakeLists.txt  README.md  package.xml
example_smach/launch/: service.launch
example_smach/scripts/: service.py
